--- a/index.html
+++ b/index.html
@@ -29,10 +29,12 @@
     </nav>
 
     <div class="call-to-action container center-align white-text">
-      <h1>Llevamos tu proyecto al próximo nivel</h1>
-      <p>
-        <a href="#contact" class="waves-effect waves-light btn-large">Cuentanos tu gran idea</a>
-      </p>
+      <div class="container">
+        <h1>Llevamos tu proyecto al próximo nivel</h1>
+        <p>
+          <a href="#contact" class="waves-effect waves-light btn-large">Cuentanos tu gran idea</a>
+        </p>
+      </div>
     </div>
 
   </header>
@@ -157,8 +159,8 @@
         <div class="col l4 offset-l2 s12">
           <h5 class="black-text">Contáctanos</h5>
           <ul>
-            <li><a class="grey-text text-darken-3" href="#!"><i class="fa fa-facebook"></i></a></li>
-            <li><a class="grey-text text-darken-3" href="#!"><i class="fa fa-twitter"></i></a></li>
+            <li><a class="grey-text text-darken-3" href="https://www.facebook.com/K-Nuclear-242671676131767/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+            <li><a class="grey-text text-darken-3" href="https://twitter.com/KNuclearCol" target="_blank"><i class="fa fa-twitter"></i></a></li>
             <li>+57 301 307 4803</li>
           </ul>
         </div>
