Bunch of changes, it's done

--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
+  <meta name="author" content="Andrés Pérez">
+  <meta name="description" content="Creación de aplicaciones móviles, diseño Gráfico y edición de fotografías, videos y demás.">
+  <meta name="theme-color" content="#607d8b">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>K-Nuclear</title>
   <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -52,6 +55,12 @@
         <a class="carousel-item" href="#three!"><img src="img/t3.png"></a>
         <a class="carousel-item" href="#four!"><img src="img/t4.png"></a>
         <a class="carousel-item" href="#five!"><img src="img/t5.png"></a>
+      </div>
+
+      <div class="center-stuff">
+        <a href="https://play.google.com/store/apps/details?id=appinventor.ai_knuclearcol.TuriCarmen&hl=es" class="center-align">
+          <img src="img/google-play-badge.png" alt="Google Play Badge" id="gpb">
+        </a>
       </div>
 
     </div>
@@ -144,8 +153,8 @@
     </div>
     <div class="footer-copyright">
       <div class="container grey-text text-darken-4">
-        © 2017 K-Nuclear
-      <a class="grey-text text-darken-3 right" href="#!">Diseñado por Andrés Pérez</a>
+        © 2017 K-Nuclear - Google Play y el logotipo de Google Play son marcas comerciales de Google Inc.
+      <a class="grey-text text-darken-3 right" href="https://www.facebook.com/oxyruss" target="_blank" rel="nofollow">Diseñado por Andrés Pérez</a>
       </div>
     </div>
   </footer>
